2004-09-21  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkpathbar.c (gtk_path_bar_size_request): Give the path
	bar arrow buttons some more room.

	* gtk/gtkactiongroup.c: Fix typos in signal docs.  (#153224,
	John Finlay)

Mon Sep 20 19:27:48 2004  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkfilechooserdefault.c (shortcuts_activate_iter): Don't
	return FALSE from a void function.  (#153185, Joel Fredrikson)

2004-09-18  Federico Mena Quintero  <federico@ximian.com>

	* gtk/gtkfilesystem.h: Removed the GTK_FILE_PATH() and
	GTK_IS_FILE_PATH() macros.  They are not supposed to exist, as
	GtkFilePath is not an object.  And they never worked, anyway.

2004-09-18  Matthias Clasen  <mclasen@redhat.com>
	
	* configure.in: Bump version.
	
	* === Released 2.4.10 ===

2004-09-18  Marco Pesenti Gritti  <marco@gnome.org>

	* gtk/gtkentry.c: (gtk_entry_completion_key_press):

	Make numeric pad enter activate the selected completion
	entry. Fix bug 143486 reported by Edd Dumbill.

2004-09-17  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: More updates.

	* gtk/gtkfilechooserdefault.c (select_func): Scroll to the selected
	row.  (#143868, Christian Persch)

2004-09-17  Matthias Clasen  <mclasen@redhat.com>

	Improve the behaviour of the file chooser in save mode. Fixes bugs
	#151031, #151608, #151994 reported by Owen Taylor and Alexander 
	Larsson.
	
	* gtk/gtkfilechooserdefault.c (gtk_file_chooser_default_set_property): 
	(location_entry_create): Propagate the action to the file 
	chooser entries.
	(gtk_file_chooser_default_should_respond): Switch folders if 
	the user enters a directory name in the entry and clear the entry
	after switching folders.
	(gtk_file_chooser_default_should_respond, shortcuts_row_activated_cb): 
	Move focus to the file list when activating a shortcut.
	(gtk_file_chooser_default_should_respond): Handle the case where the
	user clicks on "Save" after selecting a folder in the file list.

	* gtk/gtkfilechooserentry.h: 